fix areas aligns

--- a/css/site.styl
+++ b/css/site.styl
@@ -282,9 +282,10 @@ body
 .area:nth-child(even)
   .area-content
     float: right
+    padding: 50px 0 50px 30px
 
 .area-content
-  padding: 50px 30px
+  padding: 50px 30px 50px 0
   max-width: 460px
 
 .area-content h3
